feat: add installer-defined admin console
